added endpoint to download all results in a zip file, for backup purposes

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Davide Ferre'",
   "license": "ISC",
   "dependencies": {
+    "archiver": "^7.0.1",
     "cheerio": "^1.0.0-rc.2",
     "convertapi": "^1.2.0",
     "express": "^4.16.3",
